fixing tag overflow for U19

--- a/app/javascript/styles/_brand.scss
+++ b/app/javascript/styles/_brand.scss
@@ -61,6 +61,7 @@
   line-height: 22px;
   color: #4A4A4A;
   font-weight: 200;
+  max-width: 450px; // see SCP-2637
 }
 
 .scp-banner-position {
